// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries feed 1`] = `
Object {
  "data": Object {
    "feed": Array [
      Object {
        "createdAt": "12345839",
        "id": "1",
        "likes": 20,
        "message": "hello",
        "views": 300,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`queries me 1`] = `
Object {
  "data": Object {
    "me": Object {
      "avatar": "http://placeholder.com",
      "createdAt": "1615442400000",
      "email": "user@example.com",
      "id": "1",
      "role": "MEMBER",
      "settings": Object {
        "emailNotifications": true,
        "pushNotifications": false,
        "theme": "DARK",
      },
      "verified": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
